Make safetime measurement an optional feature